--- a/milestone3.ipynb
+++ b/milestone3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU5WPmAjhfJklMNP7OJWKb",
+      "authorship_tag": "ABX9TyMfGf+cf9tWfsK8rXPuCys+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,10 +74,10 @@
       "cell_type": "code",
       "source": [
         "def connect_db():\n",
-        "    server = '4sa3.database.windows.net'  # Update with your server name\n",
-        "    database = '4SA3_db'  # Update with your database name\n",
-        "    username = 'kor6'  # Update with your username\n",
-        "    password = 'LactoBif30'  # Update with your password\n",
+        "    server = 'your_server_name'\n",
+        "    database = 'your_database_name'\n",
+        "    username = 'your_username'\n",
+        "    password = 'your_password'\n",
         "    driver = '{ODBC Driver 18 for SQL Server}'\n",
         "\n",
         "    connection_string = (\n",
