--- a/milestone4.ipynb
+++ b/milestone4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2uA5HR2hEAKgMToS8W1ZE",
+      "authorship_tag": "ABX9TyNqCCmAOzg/Aidzc49QmZCh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,6 +223,45 @@
         "    for row in rows:\n",
         "        print(f\"ID: {row.BookID}, Title: {row.Title}, Author: {row.Author}, Genre: {row.Genre}, Year: {row.PublicationYear}, Rating: {row.Rating}\")\n",
         "    cursor.close()\n",
+        "\n",
+        "def update_books(connection, book_id, title=None, author=None, genre=None, year=None):\n",
+        "    \"\"\"\n",
+        "    Updates book details in the Books table.\n",
+        "    - book_id: The ID of the book to update.\n",
+        "    - title, author, genre, year: Fields to update (optional).\n",
+        "    \"\"\"\n",
+        "    cursor = connection.cursor()\n",
+        "    update_fields = []\n",
+        "    values = []\n",
+        "\n",
+        "    if title:\n",
+        "        update_fields.append(\"Title = ?\")\n",
+        "        values.append(title)\n",
+        "    if author:\n",
+        "        update_fields.append(\"Author = ?\")\n",
+        "        values.append(author)\n",
+        "    if genre:\n",
+        "        update_fields.append(\"Genre = ?\")\n",
+        "        values.append(genre)\n",
+        "    if year:\n",
+        "        update_fields.append(\"PublicationYear = ?\")\n",
+        "        values.append(year)\n",
+        "\n",
+        "    if not update_fields:\n",
+        "        print(\"No fields to update.\")\n",
+        "        return\n",
+        "\n",
+        "    update_sql = f\"UPDATE Books SET {', '.join(update_fields)} WHERE BookID = ?\"\n",
+        "    values.append(book_id)\n",
+        "\n",
+        "    try:\n",
+        "        cursor.execute(update_sql, values)\n",
+        "        connection.commit()\n",
+        "        print(f\"Book with ID {book_id} updated successfully.\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error updating book: {e}\")\n",
+        "    finally:\n",
+        "        cursor.close()\n",
         "\n",
         "def delete_books(connection, author=\"Unknown Author\"):\n",
         "  \"\"\"Deletes books from the Books table based on the author.\"\"\"\n",
