--- a/milestone3.ipynb
+++ b/milestone3.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNM/1pKL+3BnrFcT1ILphLU",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNM/1pKL+3BnrFcT1ILphLU"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rko7/SA-Milestone-Project/blob/main/milestone3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
@@ -324,7 +313,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 315
+          "height": 332
         },
         "id": "UvRjJqCiRsCP",
         "outputId": "11c668ef-1658-42af-e6dd-8c21384bcb8a"
